--- a/CMS-PROJECT/views/partials/home/home-nav.handlebars
+++ b/CMS-PROJECT/views/partials/home/home-nav.handlebars
@@ -23,6 +23,12 @@
           <a class="nav-link" href="/about">About</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/login">login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/register">register</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">Services</a>
         </li>
         <li class="nav-item">
