--- a/CMS-PROJECT/views/layouts/home.handlebars
+++ b/CMS-PROJECT/views/layouts/home.handlebars
@@ -13,10 +13,10 @@
     <title>Blog Home - Start Bootstrap Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom styles for this template -->
-    <link href="css/blog-home.css" rel="stylesheet" />
+    <link href="/css/blog-home.css" rel="stylesheet" />
 
   </head>
 
@@ -35,8 +35,8 @@
     {{>home/home-footer}}
 
     <!-- Bootstrap core JavaScript -->
-    <script src="js/jquery/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="/js/jquery/jquery.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
 
   </body>
 
