--- a/CMS-PROJECT/views/partials/home/home-nav.handlebars
+++ b/CMS-PROJECT/views/partials/home/home-nav.handlebars
@@ -29,7 +29,7 @@
           <a class="nav-link" href="/register">register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
+          <a class="nav-link" href="/admin">Admin</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
