--- a/CMS-PROJECT/views/partials/admin/side-nav.handlebars
+++ b/CMS-PROJECT/views/partials/admin/side-nav.handlebars
@@ -14,45 +14,23 @@
             class="nav-item"
             data-toggle="tooltip"
             data-placement="right"
-            title="Charts"
-          >
-            <a class="nav-link" href="charts.html">
-              <i class="fa fa-fw fa-area-chart"></i>
-              <span class="nav-link-text">Charts</span>
-            </a>
-          </li>
-          <li
-            class="nav-item"
-            data-toggle="tooltip"
-            data-placement="right"
-            title="Tables"
-          >
-            <a class="nav-link" href="tables.html">
-              <i class="fa fa-fw fa-table"></i>
-              <span class="nav-link-text">Tables</span>
-            </a>
-          </li>
-          <li
-            class="nav-item"
-            data-toggle="tooltip"
-            data-placement="right"
             title="Components"
           >
             <a
               class="nav-link nav-link-collapse collapsed"
               data-toggle="collapse"
-              href="#collapseComponents"
+              href="#collapsePosts"
               data-parent="#exampleAccordion"
             >
               <i class="fa fa-fw fa-wrench"></i>
-              <span class="nav-link-text">Components</span>
+              <span class="nav-link-text">Posts</span>
             </a>
-            <ul class="sidenav-second-level collapse" id="collapseComponents">
+            <ul class="sidenav-second-level collapse" id="collapsePosts">
               <li>
-                <a href="navbar.html">Navbar</a>
+                <a href="/admin/posts">All Posts</a>
               </li>
               <li>
-                <a href="cards.html">Cards</a>
+                <a href="/admin/posts/create">Create Post</a>
               </li>
             </ul>
           </li>
