--- a/CMS-PROJECT/views/partials/admin/side-nav.handlebars
+++ b/CMS-PROJECT/views/partials/admin/side-nav.handlebars
@@ -5,7 +5,7 @@
             data-placement="right"
             title="Dashboard"
           >
-            <a class="nav-link" href="/admin/dashboard">
+            <a class="nav-link" href="/admin">
               <i class="fa fa-fw fa-dashboard"></i>
               <span class="nav-link-text">Dashboard</span>
             </a>
@@ -14,7 +14,7 @@
             class="nav-item"
             data-toggle="tooltip"
             data-placement="right"
-            title="Components"
+            title="Posts"
           >
             <a
               class="nav-link nav-link-collapse collapsed"
