--- a/CMS-PROJECT/views/admin/posts/create.handlebars
+++ b/CMS-PROJECT/views/admin/posts/create.handlebars
@@ -12,12 +12,34 @@
   <div class="form-group">
     <label for="status">Status</label>
     <select class="form-control" id="status">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
+      <option>Public</option>
+      <option>Private</option>
+      <option>Draft</option>
     </select>
+  </div>
+
+  <div class="form-check">
+    <input
+      class="form-check-input"
+      type="checkbox"
+      name="allowComments"
+      id="allowComments"
+      value="option1"
+      checked
+    />
+    <label class="form-check-label" for="allowComments">
+      Allow Comments
+    </label>
+  </div>
+
+  <div class="form-group">
+    <label for="body">Body</label>
+    <textarea
+      class="form-control"
+      id="body"
+      rows="3"
+      placeholder="Enter Description"
+    ></textarea>
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
