--- a/CMS-PROJECT/views/admin/posts/create.handlebars
+++ b/CMS-PROJECT/views/admin/posts/create.handlebars
@@ -1,4 +1,4 @@
-<form>
+<form action="/admin/posts/create" method="POST">
   <div class="form-group">
     <label for="title">Title</label>
     <input
