--- a/CMS-PROJECT/views/admin/posts/create.handlebars
+++ b/CMS-PROJECT/views/admin/posts/create.handlebars
@@ -25,7 +25,8 @@
       type="checkbox"
       name="allowComments"
       id="allowComments"
-      checked
+      value="ture"
+      checked 
     />
     <label class="form-check-label" for="allowComments">
       Allow Comments
