--- a/CMS-PROJECT/views/admin/posts/index.handlebars
+++ b/CMS-PROJECT/views/admin/posts/index.handlebars
@@ -11,6 +11,7 @@
         <th>Title</th>
         <th>Status</th>
         <th>Allow Comments</th>
+        <th>Buttons</th>
       </tr>
     </thead>
     <tbody>
@@ -20,6 +21,9 @@
         <td>{{title}}</td>
         <td>{{status}}</td>
         <td>{{allowComments}}</td>
+        <td>
+          <a href="/admin/posts/edit/{{_id}}" class="btn btn-primary">Edit</a>
+        </td>
       </tr>
       {{/each}}
     </tbody>
