--- a/CMS-PROJECT/views/admin/posts/create.handlebars
+++ b/CMS-PROJECT/views/admin/posts/create.handlebars
@@ -13,9 +13,9 @@
   <div class="form-group">
     <label for="status">Status</label>
     <select class="form-control" id="status" name="status">
-      <option>Public</option>
-      <option>Private</option>
-      <option>Draft</option>
+            <option value="Public">Public</option>
+      <option value="Private">Private</option>
+      <option value="Draft">Draft</option
     </select>
   </div>
 
