--- a/CMS-PROJECT/views/admin/posts/edit.handlebars
+++ b/CMS-PROJECT/views/admin/posts/edit.handlebars
@@ -20,6 +20,8 @@
     </select>
   </div>
 
+  {{#select 'dddddddd'}}{{/select}}
+
   <div class="form-check">
     <input
       class="form-check-input"
