--- a/CMS-PROJECT/views/admin/posts/edit.handlebars
+++ b/CMS-PROJECT/views/admin/posts/edit.handlebars
@@ -13,14 +13,15 @@
 
   <div class="form-group">
     <label for="status">Status</label>
-    <select class="form-control" id="status" name="status">
-      <option value="Public">Public</option>
-      <option value="Private">Private</option>
-      <option value="Draft">Draft</option>
+    <select class="form-control" id="status" name="status" >
+      {{#select status}}
+        <option value="Public">Public</option>
+        <option value="Private">Private</option>
+        <option value="Draft">Draft</option>
+      {{/select}}
     </select>
   </div>
 
-  {{#select 'dddddddd'}}{{/select}}
 
   <div class="form-check">
     <input
