--- a/CMS-PROJECT/views/admin/posts/edit.handlebars
+++ b/CMS-PROJECT/views/admin/posts/edit.handlebars
@@ -1,4 +1,4 @@
-<form action="/admin/posts/edit" method="POST">
+<form action="/admin/posts/edit/{{_id}}?_method=PUT" method="POST">
   <div class="form-group">
     <label for="title">Title</label>
     <input
@@ -29,7 +29,9 @@
       type="checkbox"
       name="allowComments"
       id="allowComments"
-      {{#if allowComments}} checked {{/if}}
+      {{#if allowComments}} 
+        checked 
+      {{/if}}
     />
     <label class="form-check-label" for="allowComments">
       Allow Comments
